--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -1,5 +1,7 @@
-<div>
+<div >
     test my signin page
+    <h1 class="text-3xl font-bold underline"> hello tailwindo  </h1>
+    <h1 class="text-3xl font-bold underline"> check  </h1>
     <p>
        not bullshit but login shit
     </p>
