basic setup: -- fix structure -- add basic styles -- rearrange dependencies

--- a/src/pages/signup/signup.hbs
+++ b/src/pages/signup/signup.hbs
@@ -1,15 +1,14 @@
-<main class="signup-page">
-    <section class="signup-form__wrapper">
+<main class="flex justify-center items-center min-h-screen">
+    <section class="w-340">
         <form class="signup-form">
             <h1 class="signup-form__title">Регистрация</h1>
-            <div>
-                test shit
-            </div>
             {{#each signupFields}}
-                {{> input placeholder=placeholder id=id type=type errorMessage=errorMessage}}
+                {{> input placeholder=placeholder id=id type=type}}
             {{/each}}
             {{> button text="Зарегистрироваться" modificator="blue"}}
             <a class="signup-form__registration-link" href="/">Или все-таки есть аккаунт?</a>
         </form>
     </section>
 </main>
+
+
