new features: -- add chat, profile pages -- add photo partial -- add styles -- add images -- add gitignore

--- a/src/pages/404/404.hbs
+++ b/src/pages/404/404.hbs
@@ -1,3 +1,8 @@
-<div>
-    404
-</div>
+<main class="flex justify-center items-center min-h-screen">
+    <section class="w-340">
+        <form class="signup-form">
+            <h1 class="signup-form-title">Страница не найдена</h1>
+            <a class="signup-form-registration-link flex justify-center mt-2" href="/">На главную</a>
+        </form>
+    </section>
+</main>
