--- a/src/partials/input.hbs
+++ b/src/partials/input.hbs
@@ -1,13 +1,13 @@
-<div class="p-input">
+<div class="input">
     <input
-            class="p-input__input"
+            class="input-input"
             type="{{type}}"
             id="{{id}}"
             value="{{value}}"
             placeholder=" "
     />
-    <label class="p-input__label" for="{{id}}">
+    <label class="input-label" for="{{id}}">
         {{placeholder}}
     </label>
-    <span class="p-input__error-message">{{errorMesage}}</span>
+    <span class="input-error-message">{{errorMesage}}</span>
 </div>
