--- a/src/pages/signup/signup.hbs
+++ b/src/pages/signup/signup.hbs
@@ -1,14 +1,12 @@
 <main class="flex justify-center items-center min-h-screen">
     <section class="w-340">
         <form class="signup-form">
-            <h1 class="signup-form__title">Регистрация</h1>
+            <h1 class="signup-form-title">Регистрация</h1>
             {{#each signupFields}}
                 {{> input placeholder=placeholder id=id type=type}}
             {{/each}}
-            {{> button text="Зарегистрироваться" modificator="blue"}}
-            <a class="signup-form__registration-link" href="/">Или все-таки есть аккаунт?</a>
+            {{> button text="Зарегистрироваться" modificator="primary"}}
+            <a class="signup-form-registration-link flex justify-center mt-2" href="/login">Войти</a>
         </form>
     </section>
 </main>
-
-
