review: -- lint everything

--- a/src/partials/input.hbs
+++ b/src/partials/input.hbs
@@ -4,10 +4,11 @@
             type="{{type}}"
             id="{{id}}"
             value="{{value}}"
+            name="{{id}}"
             placeholder=" "
     />
     <label class="input-label" for="{{id}}">
-        {{placeholder}}
+        {{ placeholder }}
     </label>
-    <span class="input-error-message">{{errorMesage}}</span>
+    <span class="input-error-message">{{ errorMessage }}</span>
 </div>
