--- a/src/partials/photo.hbs
+++ b/src/partials/photo.hbs
@@ -1,8 +1,8 @@
 <div class="photo-wrapper">
     {{#if src}}
-        <img src="{{src}}"  alt=""/>
+        <img src="{{src}}"  alt="user avatar"/>
     {{else}}
-        <img src="/static/images/default_profile_image.png"  alt="avatar"/>
+        <img src="/static/images/default_profile_image.png"  alt="default avatar"/>
     {{/if}}
     <div class="photo-change">Поменять аватар</div>
 </div>
