review: -- fix everything

--- a/src/pages/500/500.hbs
+++ b/src/pages/500/500.hbs
@@ -1,8 +1,8 @@
 <main class="flex justify-center items-center min-h-screen">
     <section class="w-340">
         <form class="signup-form flex flex-col gap-3 items-center">
-            <h1 class="signup-form-title">404</h1>
-            <h2 class="signup-form-title">Не туда попали</h2>
+            <h1 class="signup-form-title">500</h1>
+            <h2 class="signup-form-title">Мы уже фиксим</h2>
             {{> button text="Назад к чатам" modificator="primary" type="submit" action="/" }}
         </form>
     </section>
