--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -11,11 +11,11 @@
                     <div class="user-img"></div>
                     <div class="user-user-info">
                         <div class="user-name">test</div>
-                        <div class="user-last-message">test text boilerplate...coming soon...</div>
+                        <p class="user-last-message">test text boilerplate...coming soon...</p>
                     </div>
                     <div class="user-message-info">
-                        <div class="user-last-time">12:34</div>
-                        <div class="user-not-readed-messages">99</div>
+                        <p class="user-last-time">12:34</p>
+                        <p class="user-not-read-messages">99</p>
                     </div>
                 </li>
             </ul>
