--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -5,7 +5,7 @@
             {{#each loginFields}}
                 {{> input placeholder=placeholder id=id type=type}}
             {{/each}}
-            {{> button text="Авторизоваться" modificator="primary"}}
+            {{> button text="Авторизоваться" modificator="primary" type="submit"}}
             <a class="login-form-registration-link" href="/signup">Нет аккаунта?</a>
         </form>
     </section>
