--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -24,7 +24,7 @@
             </ul>
             <ul class="profile-info-change-info">
                 <li class="profile-info-item">
-                    <a class="profile-info-item-link" href="#">Изменить данные</a>
+                    <a class="profile-info-item-link" href="/edit">Изменить данные</a>
                 </li>
                 <li class="profile-info-item">
                     <a class="profile-info-item-link" href="#">Изменить пароль</a>
