--- a/src/components/photo.hbs
+++ b/src/components/photo.hbs
@@ -2,7 +2,7 @@
     {{#if src}}
         <img src="{{src}}"  alt="user avatar"/>
     {{else}}
-        <img src="/static/images/default_profile_image.png"  alt="default avatar"/>
+        <img src="./static/images/default_profile_image.png.png"  alt="default avatar"/>
     {{/if}}
     <div class="photo-change">Поменять аватар</div>
 </div>
