bugfixes: -- tailwind hotfixes

--- a/src/pages/404/404.hbs
+++ b/src/pages/404/404.hbs
@@ -1,4 +1,4 @@
-<main class="flex justify-center items-center min-h-screen">
+<main class="flex justify-around m-">
     <section class="w-340">
         <form class="signup-form flex flex-col gap-3 items-center">
             <h1 class="signup-form-title">404</h1>
