--- a/src/pages/signup/signup.hbs
+++ b/src/pages/signup/signup.hbs
@@ -1,4 +1,4 @@
-<main class="flex justify-center items-center min-h-screen">
+<main class="flex justify-around m-3">
     <section class="w-340">
         <form class="signup-form">
             <h1 class="signup-form-title">Регистрация</h1>
