new features: -- implement typescript

--- a/src/pages/edit/edit.hbs
+++ b/src/pages/edit/edit.hbs
@@ -13,7 +13,7 @@
             </div>
             <div class="profile-info-name">{{name}}</div>
             <ul class="profile-info-info-list">
-                {{#each editFields}}
+                {{#each fields}}
                     {{> input placeholder=placeholder id=id type=type}}
                 {{/each}}
             </ul>
