new features: -- add EventBus -- add block -- add message input in chat

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -376,3 +376,10 @@ body {
   }
 }
 
+.chat-window {
+  display: flex;
+  flex-direction: column-reverse;
+  width: 100%;
+  margin-bottom: 100px;
+}
+
