--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -1,4 +1,4 @@
-<main class="chats-page">
+<main class="chats-page flex">
     <aside class="left-panel">
         <div class="search">
             <label>
@@ -21,4 +21,15 @@
             </ul>
         </div>
     </aside>
+    <div class="chat-window w-full">
+      <div class="search flex justify-around">
+        <label>
+          <input class="message-input search-input" type="text" placeholder="Сообщение"/>
+        </label>
+        <div class="send-message-button ">
+          <button>send message</button>
+        </div>
+      </div>
+
+    </div>
 </main>
