--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,5 @@
-@import "utilities/colors.css";
+@import url('utilities/colors.css');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,31 +8,31 @@ body {
   font-weight: normal;
   overflow-x: hidden;
   font-size: 16px;
-  font-family: "Arial", sans-serif;
+  font-family: Arial, sans-serif;
 }
 
 .signup-form {
-    border-radius: 13px;
-    box-shadow: var(--shadow);
-    padding: 32px 30px 42px;
+  border-radius: 13px;
+  box-shadow: var(--shadow);
+  padding: 32px 30px 42px;
 
-    &.signup-form-title {
-         text-align: center;
-         font-size: 1.25rem;
-         color: var(--black);
-         margin-bottom: 36px;
-    }
+  &.signup-form-title {
+    text-align: center;
+    font-size: 1.25rem;
+    color: var(--black);
+    margin-bottom: 36px;
+  }
 
-    &.button {
-        margin-top: 100px;
-    }
+  &.button {
+    margin-top: 100px;
+  }
 
-    &.signup-form-registration-link {
-        margin-top: 15px;
-        color: var(--primary);
-        display: block;
-        text-align: center;
-    }
+  &.signup-form-registration-link {
+    margin-top: 15px;
+    color: var(--primary);
+    display: block;
+    text-align: center;
+  }
 }
 
 .input {
@@ -39,6 +40,7 @@ body {
   display: flex;
   flex-direction: column;
   margin-top: 5px;
+
   & .input-label {
     position: absolute;
     top: 7px;
@@ -62,11 +64,13 @@ body {
     margin-bottom: 2px;
     transition: 0.1s ease-in border;
     cursor: pointer;
+
     &:hover,
     &:focus,
     &:not(:placeholder-shown) {
       border-color: var(--secondary-m);
     }
+
     &:focus ~ .input-label,
     &:not(:placeholder-shown) ~ .input-label {
       top: -15px;
@@ -87,21 +91,26 @@ body {
     margin-left: 14px;
   }
 }
+
 .input_error {
   & .input-input {
     border-color: var(--error);
+
     &:focus,
     &:not(:placeholder-shown) {
       border-color: var(--error);
     }
+
     &:focus ~ .input-label,
     &:not(:placeholder-shown) ~ .input-label {
       color: var(--error);
     }
   }
+
   & .input-label {
     color: var(--error);
   }
+
   & .input-error-message {
     visibility: visible;
     opacity: 1;
@@ -116,46 +125,51 @@ body {
   border-radius: 13px;
   display: block;
   width: 100%;
-
   color: var(--white);
   background-color: var(--primary);
   transition: ease-in 0.1s;
+
   &:hover {
     background-color: var(--primary-h);
   }
-  &:focus{
+
+  &:focus {
     background-color: var(--primary-f);
   }
-  &:disabled{
+
+  &:disabled {
     background-color: var(--primary-d);
   }
 }
 
-.login-page{
+.login-page {
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.login-form-wrapper{
-  width:340px;
+.login-form-wrapper {
+  width: 340px;
 }
 
-.login-form{
+.login-form {
   border-radius: 13px;
   box-shadow: var(--shadow-card);
   padding: 32px 30px 42px;
-  & .login-form-title{
+
+  & .login-form-title {
     text-align: center;
     font-size: 1.25rem;
     color: var(--black-l);
     margin-bottom: 36px;
   }
-  & .button{
+
+  & .button {
     margin-top: 100px;
   }
-  & .login-form-registration-link{
+
+  & .login-form-registration-link {
     margin-top: 15px;
     color: var(--primary);
     display: block;
@@ -166,14 +180,17 @@ body {
 .chats-page {
   height: 100vh;
   overflow: hidden;
+
   & .left-panel {
     width: 390px;
     display: flex;
     flex-direction: column;
     border-right: 1px solid var(--secondary-l);
   }
+
   & .search {
     padding: 25px 15px;
+
     & .search-input {
       background: var(--secondary-l);
       border-radius: 5px;
@@ -181,18 +198,22 @@ body {
       width: 100%;
     }
   }
+
   & .users-list-container {
     flex-grow: 1;
     overflow: hidden;
   }
-  & .users-list{
+
+  & .users-list {
     overflow: auto;
     height: calc(100vh - 83px - 73px);
   }
+
   & .user {
     display: flex;
     padding: 9px 8px 9px 15px;
-    border-top:1px solid var(--secondary-l) ;
+    border-top: 1px solid var(--secondary-l);
+
     & .user-img {
       width: 55px;
       height: 55px;
@@ -201,27 +222,32 @@ body {
       border-radius: 100%;
       margin-right: 15px;
     }
+
     & .user-name {
       font-weight: 500;
       font-size: 0.9rem;
       margin-bottom: 5px;
       color: var(--black);
     }
+
     & .user-last-message {
       color: var(--secondary-m);
       font-size: 0.8rem;
     }
-    & .user-message-info{
+
+    & .user-message-info {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
     }
+
     & .user-last-time {
       font-size: 0.7rem;
       color: var(--secondary-m);
     }
-    & .user-not-read-messages{
+
+    & .user-not-read-messages {
       background: var(--primary);
       width: 20px;
       height: 20px;
@@ -234,20 +260,25 @@ body {
       align-items: center;
     }
   }
-  & .navigation-bar-container{
+
+  & .navigation-bar-container {
     flex-shrink: 0;
   }
+
   & .navigation-bar {
     display: flex;
     justify-content: space-between;
     padding: 15px 50px;
     border-top: 1px solid var(--secondary-l);
+
     & .navigation-bar-link {
       color: var(--secondary-s-s);
       cursor: pointer;
+
       &:hover {
         color: var(--secondary-t-l);
       }
+
       & .svg-icon {
         width: 40px;
         height: 40px;
@@ -259,6 +290,7 @@ body {
 .profile-page {
   height: 100%;
   display: flex;
+
   & .profile-page-back {
     width: 70px;
     height: 100%;
@@ -269,6 +301,7 @@ body {
     align-items: center;
     cursor: pointer;
     transition: 0.2s ease-in-out background;
+
     & .profile-page-back-icon {
       width: 28px;
       height: 28px;
@@ -277,68 +310,83 @@ body {
       display: flex;
       justify-content: center;
       align-items: center;
+
       & .profile-page-back-arrow {
         width: 11px;
         height: 10px;
-        background-image: url("/static/images/arrow_back.png");
+        background-image: url('/static/images/arrow_back.png');
         background-repeat: no-repeat;
         background-size: cover;
       }
     }
-    &:hover{
+
+    &:hover {
       background: var(--secondary-bg-el);
     }
   }
+
   & .profile-info-wrapper {
     flex-grow: 1;
     display: flex;
     align-items: center;
     justify-content: center;
+
     & .profile-info-picture {
       display: flex;
       justify-content: center;
       margin-bottom: 20px;
     }
+
     & .profile-info-name {
       text-align: center;
       font-weight: 500;
       margin-bottom: 60px;
     }
+
     & .profile-info {
       width: 500px;
     }
+
     & .profile-info-info-list {
       margin-bottom: 60px;
+
       & .profile-info-item {
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 10px 0;
         border-bottom: 1px solid var(--secondary-s-l);
+
         & .profile-info-label {
           font-size: 0.8125rem;
         }
+
         & .profile-info-input {
           background-color: #fff;
           text-align: end;
         }
+
         &:last-child {
           border-bottom: none;
         }
       }
     }
+
     & .profile-info-change-info {
       & .profile-info-item {
         border-bottom: 1px solid var(--secondary-s-l);
         padding: 10px 0;
         color: var(--primary);
+
         &:last-child {
           border-bottom: none;
         }
+
         & .profile-info-item-link {
           color: var(--primary);
         }
       }
+
       & .profile-info-item-error {
         & .profile-info-item-link {
           color: var(--error);
@@ -359,6 +407,7 @@ body {
   overflow: hidden;
   position: relative;
   cursor: pointer;
+
   & .photo-change {
     opacity: 0;
     transition: 0.2s opacity ease-in-out;
@@ -371,6 +420,7 @@ body {
     width: 100%;
     height: 100%;
   }
+
   &:hover > .photo-change {
     opacity: 1;
   }
@@ -382,4 +432,3 @@ body {
   width: 100%;
   margin-bottom: 100px;
 }
-
