bugfix: -- reveal of inputs

--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -23,8 +23,8 @@
     </aside>
     <div class="chat-window w-full">
       <div class="search flex justify-around">
-        <label>
-          <input class="message-input search-input" type="text" placeholder="Сообщение"/>
+        <label for="message">
+          <input class="message-input search-input" type="text" placeholder="Сообщение" id="message"/>
         </label>
         <div class="send-message-button ">
           <button>send message</button>
