--- a/src/components/input.hbs
+++ b/src/components/input.hbs
@@ -10,5 +10,5 @@
     <label class="input-label" for="{{id}}">
         {{ placeholder }}
     </label>
-    <span class="input-error-message">{{ errorMessage }}</span>
+    <span class="input-error-message">{{ error }}</span>
 </div>
