--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -2,7 +2,7 @@
     <section class="login-form-wrapper">
         <form class="login-form">
             <h1 class="login-form-title">Вход</h1>
-            {{#each loginFields}}
+            {{#each fields}}
                 {{> input placeholder=placeholder id=id type=type}}
             {{/each}}
             {{> button text="Авторизоваться" modificator="primary" type="submit"}}
