--- a/src/pages/signup/signup.hbs
+++ b/src/pages/signup/signup.hbs
@@ -2,7 +2,7 @@
     <section class="w-340">
         <form class="signup-form">
             <h1 class="signup-form-title">Регистрация</h1>
-            {{#each signupFields}}
+            {{#each fields}}
                 {{> input placeholder=placeholder id=id type=type}}
             {{/each}}
             {{> button text="Зарегистрироваться" modificator="primary"}}
