fix styles extension

--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,5 +1,5 @@
 /* stylelint-disable no-descending-specificity */
-//@import 'variables/-colors.css';
+//@import 'variables/-colors.scss';
 
 .input {
   position: relative;
