--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,4 @@
-@import url('utilities/colors.css');
+@import url('utilities/colors.scss');
 
 // TODO: check stylelint tailwind at rule policy and styles import on prod version
 @tailwind base;
